unpackaged/main/default/objects/Product2/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accedo One Products</fullName>
            </value>
            <value>
                <fullName>Bandwidth Product</fullName>
            </value>
            <value>
                <fullName>Brightcove Global Services (BGS)</fullName>
            </value>
            <value>
                <fullName>Brightcove Product</fullName>
            </value>
            <value>
                <fullName>Customer Support Product</fullName>
            </value>
            <value>
                <fullName>Custom Priced Product</fullName>
            </value>
            <value>
                <fullName>Third Party Product</fullName>
            </value>
            <value>
                <fullName>Beacon App</fullName>
            </value>
            <value>
                <fullName>Channel Monitoring</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
            <value>
                <fullName>Platinum Plus</fullName>
            </value>
            <value>
                <fullName>Accedo App</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>