unpackaged/main/default/objects/Product2/fields/Associated_Entitlement_Oracle_Code__c.field-meta.xml
<CustomField>
    <fullName>Associated_Entitlement_Oracle_Code__c</fullName>
    <label>Associated Entitlement Oracle Code</label>
    <length>16</length>
    <type>Text</type>
</CustomField>