unpackaged/main/default/objects/Product2/fields/Custom_Amend__c.field-meta.xml
<CustomField>
    <fullName>Custom_Amend__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if this product needs to be handled with the custom amendment handler on Subscription creation.</description>
    <inlineHelpText>Check this box if this product needs to be handled with the custom amendment handler on Subscription creation.</inlineHelpText>
    <label>Custom Amend</label>
    <type>Checkbox</type>
</CustomField>