unpackaged/main/default/objects/Product2/fields/EMRR_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>EMRR_Calculation_Type__c</fullName>
    <label>EMRR Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Included</fullName>
            </value>
            <value>
                <fullName>Initial Term</fullName>
            </value>
            <value>
                <fullName>Prorated Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>