unpackaged/main/default/objects/Product2/fields/Hybrid_Proration__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Proration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Products that the Fee is prorated, but quantity is NOT</description>
    <label>Hybrid Proration</label>
    <type>Checkbox</type>
</CustomField>