unpackaged/main/default/objects/Product2/fields/Increment_Pricing_Entitlement_Type__c.field-meta.xml
<CustomField>
    <fullName>Increment_Pricing_Entitlement_Type__c</fullName>
    <label>Increment Pricing Entitlement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Entitlement_Type</valueSetName>
    </valueSet>
</CustomField>