unpackaged/main/default/objects/Product2/fields/Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this product is from the old Salesforce instance and can not be sold moving forward</inlineHelpText>
    <label>Legacy Product</label>
    <type>Checkbox</type>
</CustomField>