unpackaged/main/default/objects/Product2/fields/Legacy_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Product_Type__c</fullName>
    <label>Legacy Product Type</label>
    <length>90</length>
    <type>Text</type>
</CustomField>