unpackaged/main/default/objects/Product2/fields/No_Proration__c.field-meta.xml
<CustomField>
    <fullName>No_Proration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Proration</label>
    <type>Checkbox</type>
</CustomField>