unpackaged/main/default/objects/Product2/fields/Oracle_Code__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Code__c</fullName>
    <label>Oracle Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>