unpackaged/main/default/objects/Product2/fields/Overage_Rate_Precision__c.field-meta.xml
<CustomField>
    <fullName>Overage_Rate_Precision__c</fullName>
    <defaultValue>2</defaultValue>
    <label>Overage Rate Precision</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>