unpackaged/main/default/objects/Product2/fields/Overage_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Overage_Unit_of_Measure__c</fullName>
    <label>Overage Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>