unpackaged/main/default/objects/Product2/fields/Paperwork_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Paperwork_Sort_Order__c</fullName>
    <label>Paperwork Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>