unpackaged/main/default/objects/Product2/fields/Platform_Availability__c.field-meta.xml
<CustomField>
    <fullName>Platform_Availability__c</fullName>
    <inlineHelpText>Used to select which platforms this product is available for under &#39;Available Add-ons&#39;</inlineHelpText>
    <label>Platform Availability</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Platforms</valueSetName>
    </valueSet>
</CustomField>