unpackaged/main/default/objects/Product2/fields/Product_Family_Text__c.field-meta.xml
<CustomField>
    <fullName>Product_Family_Text__c</fullName>
    <formula>TEXT(Family)</formula>
    <label>Product Family (Text)</label>
    <type>Text</type>
</CustomField>