unpackaged/main/default/objects/Product2/fields/Support_Level__c.field-meta.xml
<CustomField>
    <fullName>Support_Level__c</fullName>
    <label>Support Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver Support</fullName>
            </value>
            <value>
                <fullName>Gold Support</fullName>
            </value>
            <value>
                <fullName>Platinum Support</fullName>
            </value>
            <value>
                <fullName>Platinum Plus Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>