unpackaged/main/default/objects/Product2/fields/Use_Custom_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Use_Custom_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked this product will calculate its price based on the Custom Pricing Type and it&#39;s associated logic</inlineHelpText>
    <label>Use Custom Pricing</label>
    <type>Checkbox</type>
</CustomField>