unpackaged/main/default/objects/Product2/listViews/Legacy_Products_All.listView-meta.xml
<ListView>
    <fullName>Legacy_Products_All</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>Oracle_Code__c</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>EMRR_Calculation_Type__c</columns>
    <columns>SBQQ__NonDiscountable__c</columns>
    <columns>Discount_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Legacy Products (All)</label>
</ListView>