unpackaged/main/default/objects/Product2/listViews/Standalone_Products.listView-meta.xml
<ListView>
    <fullName>Standalone_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Standalone__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Standalone Products</label>
</ListView>